# paperbuddy

./: .dockerignore  .gitignore  AGENTS.md  README.md  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.local.yaml  compose.yaml  main.py  pyproject.toml
backend/docker/dynamodb/: init.sh
backend/local_dynamodb/: __init__.py  main.py  seed.py
backend/src/dependencies/: chat_deps.py  client_factories.py  initialize_local_dynamodb.py  library_deps.py  local_chat_seed.py  logging_config.py  settings.py
backend/src/presentation/: access_log.py  auth.py  exception_handlers.py  request_id.py  router.py  schema.py
backend/tests/application/: test_continue_chat.py  test_delete_chat.py  test_list_chat_messages.py  test_list_chats.py  test_list_indexed_files.py  test_rename_chat.py  test_start_chat.py
backend/tests/dependencies/: test_chat_deps.py  test_client_factories.py  test_library_deps.py  test_local_chat_seed.py  test_logging_config.py  test_settings.py
backend/tests/domain/: test_chat.py  test_prompt.py
backend/tests/fakes/: __init__.py  chat_repository.py
backend/tests/infrastructure/: test_bedrock_knowledge_base_chat_client.py  test_dynamodb_chat_repository.py  test_dynamodb_indexed_file_catalog.py  test_dynamodb_indexed_file_query_repository.py  test_in_memory_chat_repository.py  test_simulated_chat_generation_client.py  test_static_indexed_file_catalog.py  test_static_indexed_file_query_repository.py
backend/tests/local_dynamodb/: test_main.py  test_seed.py
(+236 files in other folders)
