[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.24",
    "fastapi[standard]>=0.136.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
branch = true
omit = [
    "src/domain/repositories/*",
]

[tool.coverage.report]
show_missing = true
