[project]
name = "backend"
version = "1.0.0"
description = "PaperBuddyのバックエンド機能"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.24",
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.coverage.run]
branch = true
omit = [
    "src/domain/repositories/*",
]

[tool.coverage.report]
show_missing = true
